# homunculus

./: .gitignore  Makefile  README.md  config.yaml  homunculus.db  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: homunculus.md
docs/: hook-setup.md
docs/plans/: 2026-02-03-homunculus-design.md  2026-02-03-homunculus-implementation.md  2026-02-03-homunculus-improvements.md  later-ideas.md
hooks/: hooks.json
meta/detector-rules/: communication-gap.yaml  context-gap.yaml  discovery-gap.yaml  evolution-gap.yaml  integration-gap.yaml  knowledge-gap.yaml  learning-gap.yaml  permission-gap.yaml  quality-gap.yaml  reasoning-gap.yaml  recovery-gap.yaml  self-awareness-gap.yaml  speed-gap.yaml  tool-gap.yaml  verification-gap.yaml  workflow-gap.yaml
meta/meta-rules/: high-dismissal-rate.yaml  high-rollback-rate.yaml  low-approval-rate.yaml  unused-capability.yaml
meta/synthesis-templates/: agent.yaml  command.yaml  hook.yaml  mcp-server.yaml  skill.yaml
scripts/: archive_observations.py  capability_transfer.py  cli.py  detector.py  gap_types.py  init_db.py  installer.py  llm_providers.py  meta_detectors.py  meta_evolution.py  meta_observer.py  meta_synthesizer.py  observe.sh  periodic_detection.py  process_observation.py  schema.sql  synthesizer.py  template_renderer.py  track_usage.py  utils.py
skills/: homunculus.md
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase3_5.py  test_phase4.py  test_phase5.py
