[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homunculus"
version = "1.1.1"
description = "Self-evolution system for Claude Code - automatic gap detection and capability synthesis with human-in-the-loop approval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "self-evolution",
    "gap-detection",
    "capability-synthesis",
    "meta-learning",
    "automation",
    "skills",
    "hooks",
    "agents"
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.34",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/lunamoth7533/homunculus"
Repository = "https://github.com/lunamoth7533/homunculus"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
